--- a/scripts/components/road/tpls/attr_branch_Tpl/seriesOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/seriesOfBranch.html
@@ -75,8 +75,12 @@
                         </div>
                         <div class="pic-show-btn pull-right">
                             <div class="pull-right btn-group">
-                                <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" ng-disabled="picNowNum == 1"><<</button>
-                                <button class="btn btn-default btn-xs pic-next" ng-click="picNext()" ng-disabled="picNowNum == picTotal">>></button>
+                                <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" ng-disabled="picNowNum == 1">
+                                    <i class="glyphicon glyphicon-menu-left"></i>
+                                </button>
+                                <button class="btn btn-default btn-xs pic-next" ng-click="picNext()" ng-disabled="picNowNum == picTotal">
+                                    <i class="glyphicon glyphicon-menu-right"></i>
+                                </button>
                             </div>
                         </div>
                         <div class="pic-loading" ng-show="showPicLoading" ng-bind="loadText">loading...</div>
