--- a/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
@@ -1,4 +1,4 @@
-<div ng-controller="rdLaneConnexityController" class="fm-component" oncontextmenu=self.event.returnValue=false>
+<div ng-controller="rdLaneConnexityController" class="fm-component" oncontextmenu="self.event.returnValue=false">
     <div class="title">
         车信ID
         <span class="label label-info">{{lanesData.pid}}</span>
