--- a/scripts/components/road/tpls/attr_link_tpl/namesOfDetailTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/namesOfDetailTpl.html
@@ -40,10 +40,12 @@
                 <div class="pic-show-btn pull-right">
                     <div class="pull-right btn-group">
                         <a  style="color: #fff;" class="btn  btn-xs pic-pre"
-                                ng-click="picPre()" disabled><<
+                                ng-click="picPre()" disabled>
+                            <i class="glyphicon glyphicon-menu-left"></i>
                         </a>
                         <a style="color: #fff;" class="btn btn-xs pic-next"
-                                ng-click="picNext()">>>
+                                ng-click="picNext()">
+                            <i class="glyphicon glyphicon-menu-right"></i>
                         </a>
                     </div>
                 </div>
