--- a/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
@@ -1,4 +1,4 @@
-<div ng-controller="normalController" class="fm-component" oncontextmenu=self.event.returnValue=false>
+<div ng-controller="normalController" class="fm-component" oncontextmenu="self.event.returnValue=false">
     <div class="title">
         普通交限
         <span class="label label-info">{{rdRestrictData.pid}}</span>
