--- a/scripts/components/road/tpls/log_show_tpl/errorPageTpl.html
+++ b/scripts/components/road/tpls/log_show_tpl/errorPageTpl.html
@@ -8,10 +8,10 @@
         共 <span class="pic-total" ng-bind="checkTotalPage">1</span> 页
         <div class="fm-error pull-right btn-group" style="margin-left: 2px">
             <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" disabled>
-            <<
+                <i class="glyphicon glyphicon-menu-left"></i>
             </button>
             <button class="btn btn-default btn-xs pic-next" ng-click="picNext()">
-            >>
+                <i class="glyphicon glyphicon-menu-right"></i>
             </button>
             <button id="immediatelyCheck" class="btn btn-xs" style="margin-left: 20px;" ng-click="refCheck()"><i class="glyphicon glyphicon-refresh"></i> 刷新检查</button>
         </div>
