--- a/scripts/components/road/tpls/toolBar_cru_tpl/addConnexityTepl/directOfConnexityTpl.html
+++ b/scripts/components/road/tpls/toolBar_cru_tpl/addConnexityTepl/directOfConnexityTpl.html
@@ -32,7 +32,7 @@
         background-color: transparent;
     }
 </style>
-<div ng-controller="showDirectOfConnexity" id="addDirectOfConnexityDiv"  oncontextmenu=self.event.returnValue=false>
+<div ng-controller="showDirectOfConnexity" id="addDirectOfConnexityDiv"  oncontextmenu="self.event.returnValue=false">
     <ul class="list-group list-group-lg m-b-none">
         <li class="list-group-item">
             <div><label class="control-label">增加车信</label></div>
