--- a/scripts/components/road/tpls/toolBar_cru_tpl/addRestrictionTepl/addRdrestrictionTpl.html
+++ b/scripts/components/road/tpls/toolBar_cru_tpl/addRestrictionTepl/addRdrestrictionTpl.html
@@ -68,7 +68,7 @@
 </style>
 
 <div ng-controller="addRdRestrictionController" class="panel panel-default" id="laneConneexityDiv"
-     oncontextmenu=self.event.returnValue=false>
+     oncontextmenu="self.event.returnValue=false">
     <ul class="list-group list-group-lg m-b-none">
         <li class="list-group-item">
             <div><label class="control-label">创建交限</label></div>
