--- a/scripts/components/road/tpls/attr_branch_Tpl/realImageOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/realImageOfBranch.html
@@ -65,8 +65,12 @@
                         </div>
                         <div class="pic-show-btn pull-right">
                             <div class="pull-right btn-group">
-                                <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" ng-disabled="picNowNum == 0 || picNowNum == 1"><<</button>
-                                <button class="btn btn-default btn-xs pic-next" ng-click="picNext()" ng-disabled="picNowNum == picTotal">>></button>
+                                <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" ng-disabled="picNowNum == 1">
+                                    <i class="glyphicon glyphicon-menu-left"></i>
+                                </button>
+                                <button class="btn btn-default btn-xs pic-next" ng-click="picNext()" ng-disabled="picNowNum == picTotal">
+                                    <i class="glyphicon glyphicon-menu-right"></i>
+                                </button>
                             </div>
                         </div>
                         <div class="pic-loading" ng-bind="loadText" ng-show="showPicLoading">loading...</div>
