--- a/less/editor.less
+++ b/less/editor.less
@@ -25,6 +25,8 @@
 
 @bkground-color:#313131;
 
+@red:#ff0000;
+
 @arrow-left-url:"../../../images/road/img/left.png";
 
 @arrow-left-img:"../../images/road/img/arrow-left.png";
@@ -1631,5 +1633,31 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   background: rgba(150,150,150, 0.5);
   padding: 3px 12px;
   font-size: 12px;
+}
+
+/*** 表单修改后样式 ***/
+.border-left(@borderStyle:auto,@borderWidth:auto,@borderColor:auto){
+  border-left:@borderStyle @borderWidth @borderColor;
+}
+
+input[type="text"].ng-dirty,textarea.ng-dirty,select.ng-dirty,input[type="number"].ng-dirty {
+  .border-left(solid,2px,@red) !important;
+}
+select.localytics-chosen.ng-dirty + div > a {
+  .border-left(solid,2px,@red) !important;
+}
+input[type=radio]:checked.ng-dirty:before{
+  content:"";
+  .border-left(solid,2px,@red) !important;
+  margin-left:-2px;
+}
+input[type=checkbox].ng-dirty:before {
+  content:"";
+  .border-left(solid,2px,@red) !important;
+  margin-left:-2px;
+}
+
+.modifiedInfo {
+  color: @red !important;
 }
 
