--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -1,13 +1,13 @@
  <div ng-controller="baseInfoCtl">
     <div ng-show="propertyType=='base'">
-        <div class="fm-panel" >
+        <div my-form class="fm-panel" >
             <div class="content" style="padding-bottom: 18px;">
 
                     <ul class="fm-ul fm-ul-form">
                         <li>
                             <label>名 称</label>
                             <div >
-                                <input type="text" class="fm-control" ng-model="poi.name.name"/>
+                                <input fm-edit-view type="text" class="fm-control" ng-model="poi.name.name"/>
                             </div>
                         </li>
                         <li>
@@ -16,17 +16,17 @@
                                 <!--<input type="text" class="fm-control" ng-model="address.fullname"/>-->
                             <!--</div>-->
                             <div>
-                                <input type="text" class="fm-control" ng-model="poi.address.fullname"/>
+                                <input fm-edit-view type="text" class="fm-control" ng-model="poi.address.fullname"/>
                             </div>
                         </li>
                         <li>
                             <label>邮 编</label>
-                            <div><input type="text" class="fm-control" ng-model="poi.postCode"/></div>
+                            <div><input fm-edit-view type="text" class="fm-control" ng-model="poi.postCode"/></div>
                         </li>
                         <li>
                             <label>种 别</label>
                             <div>
-                                <select class="fm-control" ng-model="selectedKind"
+                                <select fm-edit-view class="fm-control" ng-model="selectedKind"
                                         no_results_text="'没有找到'"  placeholder_text_single="'--请选择--'" search_contains=true
                                         ng-options="value as lable.kindName for (value, lable) in metaData.kindFormat"
                                         chosen ng-change="kindChange($event, this)">
@@ -36,7 +36,7 @@
                         <li>
                             <label>品 牌</label>
                             <div>
-                                <select class="fm-control"  ng-model="selectedChain"
+                                <select fm-edit-view class="fm-control"  ng-model="selectedChain"
                                         no_results_text="'--无--'"  placeholder_text_single="'--请选择--'"
                                         ng-options="value as lable.chainName for (value, lable) in chainList"
                                         chosen ng-change="brandChange($event, this)">
@@ -47,7 +47,7 @@
                             <label>等 级</label>
                             <div>
                                 <label ng-repeat="lev in levelArr">
-                                    <input type="radio"  ng-model="poi.level" value="{{lev}}"> {{lev}}
+                                    <input fm-edit-view type="radio"  ng-model="poi.level" value="{{lev}}"> {{lev}}
                                 </label>
                             </div>
                         </li>
@@ -55,11 +55,11 @@
                             <label >24小时</label>
                             <div>
                                 <label>
-                                    <input type="radio" name="24h" value="1" ng-model="poi.open24h">
+                                    <input fm-edit-view type="radio" name="24h" value="1" ng-model="poi.open24h">
                                     是
                                 </label>
                                 <label>
-                                    <input type="radio" name="24h" value="2" ng-model="poi.open24h">
+                                    <input fm-edit-view type="radio" name="24h" value="2" ng-model="poi.open24h">
                                     否
                                 </label>
                             </div>
@@ -68,11 +68,11 @@
                             <label >室内POI</label>
                             <div>
                                 <label>
-                                    <input type="radio" name="indoor" value="3" ng-model="poi.indoor">
+                                    <input fm-edit-view type="radio" name="indoor" value="3" ng-model="poi.indoor">
                                     是
                                 </label>
                                 <label>
-                                    <input type="radio" name="indoor" value="0" ng-model="poi.indoor">
+                                    <input fm-edit-view type="radio" name="indoor" value="0" ng-model="poi.indoor">
                                     否
                                 </label>
                             </div>
@@ -80,7 +80,7 @@
                         <li>
                             <label >备注</label>
                             <div>
-                                <textarea class="fm-control" ng-model="poi.poiMemo" rows=""></textarea>
+                                <textarea fm-edit-view class="fm-control" ng-model="poi.poiMemo" rows=""></textarea>
                             </div>
                         </li>
                     </ul>
