--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1451,47 +1451,26 @@ a.fm-panel-controlArrowRight > span {
   padding: 3px 12px;
   font-size: 12px;
 }
-
-
-/*input[type="text"].ng-dirty,textarea.ng-dirty,select.ng-dirty,input[type="number"].ng-dirty{*/
-   /*!*background-color: #307BA3 !important;*!*/
-   /*border-left: solid red 2px !important;*/
-/*}*/
-/*select.localytics-chosen.ng-dirty + div > a {*/
-  /*!*background-color: #307BA3 !important;*!*/
-  /*border-left: solid red 2px !important;*/
-/*}*/
-/*input[type=radio]:checked.ng-dirty:before{*/
-  /*content:"";*/
-  /*border-left: solid red 2px !important;*/
-  /*margin-left:-2px;*/
-/*}*/
-/*input[type=checkbox].ng-dirty:before {*/
-  /*content:"";*/
-  /*border-left: solid red 2px !important;*/
-  /*margin-left:-2px;*/
-/*}*/
-
-/*.modifiedInfo {*/
-  /*color: red !important;*/
-/*}*/
-
-/*input[type=checkbox],input[type=radio]{*/
-  /*-webkit-appearance: none;*/
-  /*appearance: none;*/
-  /*width: 13px;*/
-  /*height: 13px;*/
-  /*margin: 0;*/
-  /*cursor: pointer;*/
-  /*vertical-align: bottom;*/
-  /*background: #fff;*/
-  /*border: 1px solid green;*/
-  /*-webkit-border-radius: 1px;*/
-  /*-moz-border-radius: 1px;*/
-  /*border-radius: 3px;*/
-  /*-webkit-box-sizing: border-box;*/
-  /*-moz-box-sizing: border-box;*/
-  /*box-sizing: border-box;*/
-  /*position: relative;*/
-/*}*/
-
+/*** 表单修改后样式 ***/
+input[type="text"].ng-dirty,
+textarea.ng-dirty,
+select.ng-dirty,
+input[type="number"].ng-dirty {
+  border-left: solid 2px #ff0000 !important;
+}
+select.localytics-chosen.ng-dirty + div > a {
+  border-left: solid 2px #ff0000 !important;
+}
+input[type=radio]:checked.ng-dirty:before {
+  content: "";
+  border-left: solid 2px #ff0000 !important;
+  margin-left: -2px;
+}
+input[type=checkbox].ng-dirty:before {
+  content: "";
+  border-left: solid 2px #ff0000 !important;
+  margin-left: -2px;
+}
+.modifiedInfo {
+  color: #ff0000 !important;
+}
