--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -58,6 +58,9 @@
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'ELECTRONIC_EYE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('ELECTRONIC_EYE')">电子眼</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDSLOPE':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RDSLOPE')">坡度</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDTEST':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('RDTEST')">框选测试</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'CRFINTER':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('CRFINTER')">CRF交叉点</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'CRFROAD':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('CRFROAD')">CRF道路</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'CRFOBJ':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('CRFOBJ')">CRF对象</button>
             </li>
         </ul>
     </div>
