--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -7,7 +7,7 @@
                         <li>
                             <label>名 称</label>
                             <div >
-                                <input type="text" class="fm-control" ng-model="poi.name.name"/>
+                                <input type="text" class="fm-control" ng-model="poi.name.name" ng-disabled="true"/>
                             </div>
                         </li>
                         <li>
@@ -16,12 +16,12 @@
                                 <!--<input type="text" class="fm-control" ng-model="address.fullname"/>-->
                             <!--</div>-->
                             <div>
-                                <input type="text" class="fm-control" ng-model="poi.address.fullname"/>
+                                <input type="text" class="fm-control" ng-model="poi.address.fullname" ng-disabled="true"/>
                             </div>
                         </li>
                         <li>
                             <label>邮 编</label>
-                            <div><input type="text" class="fm-control" ng-model="poi.postCode"/></div>
+                            <div><input type="text" class="fm-control" ng-model="poi.postCode" ng-disabled="true"/></div>
                         </li>
                         <li>
                             <label>种 别</label>
@@ -29,7 +29,7 @@
                                 <select class="fm-control" ng-model="selectedKind"
                                         no_results_text="'没有找到'"  placeholder_text_single="'--请选择--'" search_contains=true
                                         ng-options="value as lable.kindName for (value, lable) in metaData.kindFormat"
-                                        chosen ng-change="kindChange($event, this)">
+                                        chosen ng-change="kindChange($event, this)" ng-disabled="true">
                                 </select>
                             </div>
                         </li>
@@ -39,7 +39,7 @@
                                 <select class="fm-control"  ng-model="selectedChain"
                                         no_results_text="'--无--'"  placeholder_text_single="'--请选择--'"
                                         ng-options="value as lable.chainName for (value, lable) in chainList"
-                                        chosen ng-change="brandChange($event, this)">
+                                        chosen ng-change="brandChange($event, this)" ng-disabled="true">
                                 </select>
                             </div>
                         </li>
@@ -47,7 +47,7 @@
                             <label>等 级</label>
                             <div>
                                 <label ng-repeat="lev in levelArr">
-                                    <input type="radio"  ng-model="poi.level" value="{{lev}}"> {{lev}}
+                                    <input type="radio"  ng-model="poi.level" value="{{lev}}" ng-disabled="true"> {{lev}}
                                 </label>
                             </div>
                         </li>
@@ -55,11 +55,11 @@
                             <label >24小时</label>
                             <div>
                                 <label>
-                                    <input type="radio" name="24h" value="1" ng-model="poi.open24h">
+                                    <input type="radio" name="24h" value="1" ng-model="poi.open24h" ng-disabled="true">
                                     是
                                 </label>
                                 <label>
-                                    <input type="radio" name="24h" value="2" ng-model="poi.open24h">
+                                    <input type="radio" name="24h" value="2" ng-model="poi.open24h" ng-disabled="true">
                                     否
                                 </label>
                             </div>
@@ -68,11 +68,11 @@
                             <label >室内POI</label>
                             <div>
                                 <label>
-                                    <input type="radio" name="indoor" value="3" ng-model="poi.indoor">
+                                    <input type="radio" name="indoor" value="3" ng-model="poi.indoor" ng-disabled="true">
                                     是
                                 </label>
                                 <label>
-                                    <input type="radio" name="indoor" value="0" ng-model="poi.indoor">
+                                    <input type="radio" name="indoor" value="0" ng-model="poi.indoor" ng-disabled="true">
                                     否
                                 </label>
                             </div>
@@ -80,14 +80,14 @@
                         <li>
                             <label >备注</label>
                             <div>
-                                <textarea class="fm-control" ng-model="poi.poiMemo" rows=""></textarea>
+                                <textarea class="fm-control" ng-model="poi.poiMemo" rows="" ng-disabled="true"></textarea>
                             </div>
                         </li>
                     </ul>
                 </form>
             </div>
         </div>
-        <div class="fm-panel">
+        <div class="fm-panel" ng-disabled="true">
             <div class="title"><a href="javascript:void(0);" title="点击添加电话" ng-click="addContact()">联系电话 &nbsp;&nbsp;<i class="glyphicon glyphicon-plus-sign"></i></a>
                 <span style="float:right;">共 <span ng-bind="poi.contacts.length"></span> 条</span>
             </div>
