--- a/scripts/components/road/tpls/attr_warninginfo_tpl/carTypeTpl.html
+++ b/scripts/components/road/tpls/attr_warninginfo_tpl/carTypeTpl.html
@@ -405,7 +405,7 @@
         <h3 class="date-title pull-left">车辆类型</h3>
         <div class="pull-right" style="display:inline-flex;color: #fff">
             <a style="cursor: pointer;"  ng-click="showPopover($event)">添加</a>
-            <input  type="checkbox" id="checkallow" ng-checked="checkValue" ng-click="checkViche()" >允许
+            <input  type="checkbox" id="checkallow" ng-model="checkValue" ng-checked="checkValue" ng-click="checkViche()" >允许
         </div>
         <div class="clearfix"></div>
     </div>
