新增分叉口关系

--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -65,6 +65,7 @@
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'CRFOBJ':'active'}[featureOperator]" ng-controller="addCRFShapeCtrl" ng-click="addShape('CRFOBJ')">CRF对象</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDSAMENODE':'active'}[featureOperator]" ng-controller="addSameFeatureCtrl" ng-click="addShape('RDSAMENODE')">同一点</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDSAMELINK':'active'}[featureOperator]" ng-controller="addSameFeatureCtrl" ng-click="addShape('RDSAMELINK')">同一线</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDSE':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDSE')">分叉口</button>
             </li>
         </ul>
     </div>
