--- a/scripts/components/road/tpls/attr_speedbump_tpl/speedBumpTpl.html
+++ b/scripts/components/road/tpls/attr_speedbump_tpl/speedBumpTpl.html
@@ -2,7 +2,7 @@
     <div class="fm-component" >
         <div class="title">
             减速带PID
-            <span class="label label-info">{{rdWarningInfoObj.pid}}</span>
+            <span class="label label-info">{{speedBumpData.pid}}</span>
         </div>
         <div class="content">
             <form>
@@ -10,19 +10,19 @@
                     <li>
                         <label>进入线</label>
                         <div >
-                            <input type="text" readonly class="fm-control" ng-model="rdWarningInfoObj.linkPid"/>
+                            <input type="text" readonly class="fm-control" ng-model="speedBumpData.linkPid"/>
                         </div>
                     </li>
                     <li>
                         <label>进入点</label>
                         <div>
-                            <input type="text" readonly class="fm-control" ng-model="rdWarningInfoObj.nodePid"/>
+                            <input type="text" readonly class="fm-control" ng-model="speedBumpData.nodePid"/>
                         </div>
                     </li>
                     <li>
                         <label>备注信息</label>
                         <div>
-                            <input type="text"  ng-model="rdWarningInfoObj.memo" >
+                            <input type="text"  ng-model="speedBumpData.memo" >
                         </div>
                     </li>
                 </ul>
