收费站通道信息

--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGateTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGateTpl.html
@@ -74,7 +74,7 @@
             <ul class="list-group list-group-lg m-b-none">
                 <li class="list-group-item">
                     <div class="list-name">
-                        <a ng-click="addLimit()" style="cursor: pointer;color: #ffffff;">名称（共 {{tollGateData.passages.length}} 条）</a>
+                        <a ng-click="addLimit()" style="cursor: pointer;color: #ffffff;">通道信息（共 {{tollGateData.passages.length}} 条）</a>
                     </div>
                     <div class="list-line"></div>
                 </li>
