顺行的经过线

--- a/less/editor.less
+++ b/less/editor.less
@@ -1660,4 +1660,15 @@ form input[type=checkbox].ng-dirty:before {
 .modifiedInfo {
   color: @red !important;
 }
+.fm-ul-container{
+  margin: 10px;
+  border: 1px solid #fff;
+  position: relative;
+  padding:5px 40px 5px 10px;
+  border-radius: 4px;
+}
+.fm-cursor{
+  cursor: pointer;
+  color: #ffffff;
+}
 
