--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1474,3 +1474,14 @@ form input[type=checkbox].ng-dirty:before {
 .modifiedInfo {
   color: #ff0000 !important;
 }
+.fm-ul-container {
+  margin: 10px;
+  border: 1px solid #fff;
+  position: relative;
+  padding: 5px 40px 5px 10px;
+  border-radius: 4px;
+}
+.fm-cursor {
+  cursor: pointer;
+  color: #ffffff;
+}
