收费站二级面板显示和编辑

--- a/less/editor.less
+++ b/less/editor.less
@@ -1671,4 +1671,15 @@ form input[type=checkbox].ng-dirty:before {
   cursor: pointer;
   color: #ffffff;
 }
-
+.attr-img-container{
+  width: 100%;
+  height: 150px;
+  margin-bottom: 5px;
+}
+.attr-img-show{
+  margin: 0 auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 150px;
+}
