--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -35,9 +35,9 @@
             </li>
         </ul>
     </div>
-    <div class="btn-group">
-        <button type="button" class="btn btn-xs btn-shape dropdown-toggle" ng-class="{'addRelation':'active'}[shapeOperator]" data-toggle="dropdown">关系 <span class="caret"></span></button>
-        <ul class="dropdown-menu shape-well" role="menu">
+    <div class="btn-group" uib-dropdown is-open="dropdownStatus.isopen"><!-- dropdownStatus.isopen 在toolbarCtrl.js中定义 -->
+        <button uib-dropdown-toggle type="button" class="btn btn-xs btn-shape dropdown-toggle" ng-class="{'addRelation':'active'}[shapeOperator]">关系 <span class="caret"></span></button>
+        <ul class="dropdown-menu shape-well" role="menu" uib-dropdown-menu>
             <li class="btn-group btn-group-sm" style="margin: 0 2px;">
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'RDCROSS':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDCROSS')">路口</button>
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'RDSPEEDLIMIT':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDSPEEDLIMIT')">限速</button>
