--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
@@ -19,9 +19,47 @@
                             </select>
                         </div>
                     </li>
+                    <li>
+                        <div class="date-well">
+                            <div class="date-head">
+                                <label>车辆类型</label>
+                                <div class="pull-right" style="display:inline-flex;color: #fff">
+                                    <a style="cursor: pointer;"  ng-click="showPopover($event)">添加</a>
+                                    <input  type="checkbox" id="checkallow" ng-model="checkValue" ng-checked="checkValue" ng-click="checkViche()" >允许
+                                </div>
+                            </div>
+                            <div class="date-body">
+                                <div class="date-list col-md-6" ng-repeat="item in carData">
+                                    <div style="color:#ffffff;padding: 5px;" ng-bind="item.label">
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+                                <div class="line"></div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </form>
         </div>
+    </div>
+    <div class="carTypeTip tooltip-container" style="display: none;">
+        <div class="pull-left" style="margin-top: -8px;color: #FFF;">车辆类型</div>
+        <div class="pull-right" style="margin-top: -10px;">
+            <button type="button" class="close" aria-label="Close" ng-click="hidePopover($event);"
+                    style="color: #fff;opacity: 1;margin-top: -4px;margin-right: -8px;">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="clearfix"></div>
+        <div class="line line-date"></div>
+        <div class="form-group fix-time tooltip-slide-well dark scroll-styled" id="carDiv" >
+            <li ng-repeat="item in vehicleOptions" style=" list-style: none;color:#ffffff;">
+                <input tabindex="1" style="float:right;margin-right: 10px" type="checkbox"
+                       ng-checked="item.checked"
+                       ng-click="carSelect(item,$event)"/>{{item.label}}
+            </li>
+        </div>
+        <div class='tooltip-arrow-right'></div>
     </div>
 </div>
 
