--- a/scripts/components/road/tpls/attr_lc_tpl/lcLinkTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcLinkTpl.html
@@ -19,15 +19,15 @@
                         <li>
                             <label>Link形态</label>
                             <div>
-                                <select ng-model="lcLinkData.form[0].kind"
-                                        ng-options="value.id as value.label for value in kind">
+                                <select ng-model="lcLinkData.form[0].kind" ng-options="value.id as value.label for value in kind">
+                                    <option value="">请选形态种别</option>
                                 </select>
                             </div>
                         </li>
                         <li>
                             <label>Link长度</label>
                             <div>
-                                <input type="text" ng-model="lcLinkData.length" disabled="disabled">
+                                <input type="text" ng-model="lcLinkData.length" disabled="disabled"> m
                             </div>
                         </li>
                         <li>
